# aiogram_bot_template

./: .env.example  README.md  loader.py  main.py  pyproject.toml  requirements.txt
data/: __init__.py  config.py
filters/: is_admin.py  is_group.py  is_user.py
handlers/: __init__.py
handlers/errors/: __init__.py  errors_handler.py
handlers/users/: __init__.py  help.py  start.py
keyboards/: __init__.py
services/: __init__.py  default_commands.py  on_startup_notify.py
utils/: __init__.py  bot_default_commands.py  notify_admin.py
